deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: one-api
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: one-api
  template:
    metadata:
      annotations:
        backstage.io/kubernetes-id: one-api
        vault.hashicorp.com/agent-inject: 'true'
        vault.hashicorp.com/role: 'one-api'
        vault.hashicorp.com/agent-inject-secret-config.txt: 'kubeos/dev/one-api'
    spec:
      serviceAccountName: one-api
      automountServiceAccountToken: true
      volumes:
        # - name: rw-tmp-volume
        #   persistentVolumeClaim:
        #     claimName: imagestoreclaim
        - name: tmp-rw-volume
          emptyDir: {}
        - name: appsettings-volume
          configMap:
            name: appsettings
      containers:
        - name: my-one-api
          image: rohitrustagi007/one-api:1
          volumeMounts:
            - mountPath: "/tmp"
              name: tmp-rw-volume
            - name: appsettings-volume
              mountPath: /app/Settings    
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 500Mi
          securityContext:
            runAsUser: 1000 # Replace with your desired user ID
            runAsGroup: 1000 # Replace with your desired group ID
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
